syntax = "proto3";

import "RpcInfo.proto";

option java_package = "com.silhouette.rpcservice";
option java_multiple_files = true;

service RpcService {
  rpc remoteCall (ReqInfo) returns (stream RespInfo) {}
}